--- a/about.html
+++ b/about.html
@@ -305,7 +305,9 @@ $(document).ready(function () {
 </div>
 
 
-<p>Look how talented I am!</p>
+<p>Originally from the Tampa Bay area, I got a B.S. degree from the University of Florida in Material Science Engineering. I’ve worked as a Metallurgical Engineer for the last 4.5 years in Roanoke, VA.</p>
+<p>In May, I started a part-time, online Data Science M.S. degree offered by the University of Virginia. You can find examples of my semester projects, both group and individual, <a href="github.com/camillevleonard">here</a>.</p>
+<p>I don’t have much free time anymore between working full time and getting the Master’s. However, when I do manage a free minute I like to read, play D&amp;D, travel, and skate or bike.</p>
 
 
 
