Add resume and project tabs

--- a/cv.html
+++ b/cv.html
@@ -9,9 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Camille Leonard" />
 
+<meta name="date" content="2020-11-28" />
 
-<title>Camille’s Website</title>
+<title>Camille_Leonard_CV</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -306,12 +308,21 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Camille’s Website</h1>
+<h1 class="title toc-ignore">Camille_Leonard_CV</h1>
+<h4 class="author">Camille Leonard</h4>
+<h4 class="date">11/28/2020</h4>
 
 </div>
 
 
-<p>Welcome to my website!</p>
+<pre class="r"><code>library(datadrivencv)</code></pre>
+<pre class="r"><code>datadrivencv::use_datadriven_cv(
+  full_name = &quot;Camille V. Leonard&quot;,
+  data_location = &quot;&quot;,
+  pdf_location = &quot;&quot;,
+  html_location = &quot;&quot;,
+  source_location = &quot;https://github.com/camillevleonard/cv&quot;
+)</code></pre>
 
 
 
