--- a/about.html
+++ b/about.html
@@ -288,6 +288,12 @@ $(document).ready(function () {
 <li>
   <a href="about.html">About Me</a>
 </li>
+<li>
+  <a href="cv.html">Resume</a>
+</li>
+<li>
+  <a href="projects.html">Projects</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
