--- a/about.html
+++ b/about.html
@@ -79,6 +79,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -308,9 +309,9 @@ $(document).ready(function () {
 </div>
 
 
-<p>Originally from the Tampa Bay area, I got a B.S. degree from the University of Florida in Material Science Engineering. I’ve worked as a Metallurgical Engineer for the last 4.5 years in Roanoke, VA.</p>
+<p><img src="headshot.jpg" alt="Headshot" />  Originally from the Tampa Bay area, I got a B.S. degree from the University of Florida in Material Science Engineering. I’ve worked as a Metallurgical Engineer for the last 4.5 years in Roanoke, VA.</p>
 <p>In May, I started a part-time, online Data Science M.S. degree offered by the University of Virginia. You can find examples of my semester projects, both group and individual, <a href="github.com/camillevleonard">here</a>.</p>
-<p>I don’t have much free time anymore between working full time and getting the Master’s. However, when I do manage a free minute I like to read, play D&amp;D, travel, and skate or bike.</p>
+<p>When I have a little bit of time between working full time and getting the Master’s, I like to read, play D&amp;D, take photos, travel, and skate or bike.</p>
 
 
 
