Deploy Project Page and Update Home Page

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -114,33 +114,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 51px;
+  padding-top: 52px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 57px;
+  margin-top: -57px;
 }
 .section h2 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 57px;
+  margin-top: -57px;
 }
 .section h3 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 57px;
+  margin-top: -57px;
 }
 .section h4 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 57px;
+  margin-top: -57px;
 }
 .section h5 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 57px;
+  margin-top: -57px;
 }
 .section h6 {
-  padding-top: 56px;
-  margin-top: -56px;
+  padding-top: 57px;
+  margin-top: -57px;
 }
 .dropdown-submenu {
   position: relative;
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
-  <a href="projects.html">Projects</a>
+  <a href="project.html">Projects</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -309,7 +309,11 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="headshot.jpg" alt="Headshot" />  Originally from the Tampa Bay area, I got a B.S. degree from the University of Florida in Material Science Engineering. I’ve worked as a Metallurgical Engineer for the last 4.5 years in Roanoke, VA.</p>
+<div class="figure">
+<img src="headshot.jpg" alt="" />
+<p class="caption">Headshot</p>
+</div>
+<p>Originally from the Tampa Bay area, I got a B.S. degree from the University of Florida in Material Science Engineering. I’ve worked as a Metallurgical Engineer for the last 4.5 years in Roanoke, VA.</p>
 <p>In May, I started a part-time, online Data Science M.S. degree offered by the University of Virginia. You can find examples of my semester projects, both group and individual, <a href="github.com/camillevleonard">here</a>.</p>
 <p>When I have a little bit of time between working full time and getting the Master’s, I like to read, play D&amp;D, take photos, travel, and skate or bike.</p>
 
