--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
-  <a href="projects.html">Projects</a>
+  <a href="project.html">Projects</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -311,7 +311,28 @@ $(document).ready(function () {
 <p><span class="math inline">\(~\)</span></p>
 <div id="welcome-to-my-website" class="section level3">
 <h3>Welcome to my website!</h3>
-<p>My biggest current project is working on my Data Science M.S. degree. To date, I have completed three courses shown in the table below.</p>
+<p>My biggest current project is working on my Data Science M.S. degree. In completing my coursework, I have gained experience in:</p>
+<ul>
+<li>Fitting regression and classification models in R</li>
+<li>Interpreting fitted models and selecting tuning parameters to improve performance</li>
+<li>R
+<ul>
+<li>Caret</li>
+<li>GGplot2</li>
+<li>Base R</li>
+<li>RStudio</li>
+<li>Rmd files</li>
+</ul></li>
+<li>Python
+<ul>
+<li>Matplotlib</li>
+<li>Plotly</li>
+<li>Webscraping</li>
+</ul></li>
+<li>Data cleaning</li>
+<li>Agile methodologies (SCRUM)</li>
+</ul>
+<p>To date, I have completed three courses shown in the table below.</p>
 <table>
 <colgroup>
 <col width="19%" />
@@ -344,28 +365,7 @@ $(document).ready(function () {
 </tbody>
 </table>
 <hr />
-<p>In completing my coursework, I have gained experience in:</p>
-<ul>
-<li>Fitting regression and classification models in R</li>
-<li>Interpreting fitted models and selecting tuning parameters to improve performance</li>
-<li>R
-<ul>
-<li>Caret</li>
-<li>GGplot2</li>
-<li>Base R</li>
-<li>RStudio</li>
-<li>Rmd files</li>
-</ul></li>
-<li>Python
-<ul>
-<li>Matplotlib</li>
-<li>Plotly</li>
-<li>Webscraping</li>
-</ul></li>
-<li>Data cleaning</li>
-<li>Agile methodologies (SCRUM)</li>
-</ul>
-<p>Projects which showcase these skills can be found on the Projects page.</p>
+<p>Projects which showcase these skills can be found on the <a href="/projects.html">Projects</a> page.</p>
 <p>This website is created from Rmd files hosted on Github based on <a href="http://nickstrayer.me/RMarkdown_Sites_tutorial/">this tutorial</a> by Nick Strayer.</p>
 </div>
 
