--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@ $(document).ready(function () {
 
 
 <div class="figure">
-<img src="headshot.jpg" alt="" />
+<img src="headshot.jpg" width="200" alt="" />
 <p class="caption">Headshot</p>
 </div>
 <p>Originally from the Tampa Bay area, I got a B.S. degree from the University of Florida in Material Science Engineering. I’ve worked as a Metallurgical Engineer for the last 4.5 years in Roanoke, VA.</p>
