--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ $(document).ready(function () {
 <p><span class="math inline">\(~\)</span></p>
 <div id="welcome-to-my-website" class="section level3">
 <h3>Welcome to my website!</h3>
-<p>My biggest current project is working on my Data Science M.S. degree. To date, I have completed three courses shown in the table below and maintained a 4.0 GPA.</p>
+<p>My biggest current project is working on my Data Science M.S. degree. To date, I have completed three courses, shown in the table below, and maintained a 4.0 GPA.</p>
 <table>
 <colgroup>
 <col width="19%" />
