--- a/index.html
+++ b/index.html
@@ -334,29 +334,13 @@ $(document).ready(function () {
 <td align="left">Data mining describes approaches to turning data into information. Rather than the more typical deductive strategy of building models using known principles, data mining uses inductive approaches to discover the appropriate models. These models describe a relationship between a system’s response and a set of factors or predictor variables. Data mining in this context provides a formal basis for machine learning and knowledge discovery. This course investigates the construction of empirical models from data mining for systems with both discrete and continuous valued responses. It covers both estimation and classification, and explores both practical and theoretical aspects of data mining.</td>
 <td align="center"><a href="https://camillevleonard.github.io/project.html">Disaster Response</a></td>
 </tr>
+<tr class="even">
+<td align="left">Currently Taking: <em>Foundations of Computer Science</em></td>
+<td align="left">The main goal of this course is to provide an overview of fundamental computer science concepts, such as algorithm design, data structures, databases and analysis techniques. To reach this goal, topics include: algorithms for hash tables, trees, queues, sorting, graphs; key-value stores at scale; database topics such as RA, ER, and the MySQL language; and finally some advanced analysis techniques.</td>
+<td align="center"></td>
+</tr>
 </tbody>
 </table>
-<p>In completing my coursework, I have gained experience in:</p>
-<ul>
-<li>Fitting regression and classification models in R</li>
-<li>Interpreting fitted models and selecting tuning parameters to improve performance</li>
-<li>R
-<ul>
-<li>Caret</li>
-<li>GGplot2</li>
-<li>Base R</li>
-<li>RStudio</li>
-<li>Rmd files</li>
-</ul></li>
-<li>Python
-<ul>
-<li>Matplotlib</li>
-<li>Plotly</li>
-<li>Webscraping</li>
-</ul></li>
-<li>Data cleaning</li>
-<li>Agile methodologies (SCRUM)</li>
-</ul>
 <p>This website is created from Rmd files hosted on Github based on <a href="http://nickstrayer.me/RMarkdown_Sites_tutorial/">this tutorial</a> by Nick Strayer.</p>
 </div>
 
