Update webpage title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8</title>
+<title>Camille V. Leonard</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -280,6 +280,7 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Camille V. Leonard</h1>
 
 </div>
 
