Added summer classes

--- a/index.html
+++ b/index.html
@@ -292,6 +292,22 @@ $(document).ready(function () {
 <p>Below I have listed my UVA MSDS coursework, personal projects, and additional independent learning. To view project write-ups and code please visit the included links. I’m most proud of my final project from the Data Mining class. Check it out if you have a few minutes!</p>
 <p><br></p>
 </div>
+<div id="summer-2021" class="section level2">
+<h2><strong>Summer 2021</strong></h2>
+<div id="exploratory-text-analytics-ds-5001" class="section level3">
+<h3>Exploratory Text Analytics (DS 5001)</h3>
+<p><em>Course Description:</em> This course provides an introduction to text analytics with a focus on pattern discovery in long-form documents, such as reviews, news articles, and novels. Students convert source texts into structure-preserving analytical form and then apply information theory, NLP tools, and vector-based methods to explore language models, topic models, sentiment analyses, and narrative structures. The focus is on unsupervised methods to explore cognitive and social patterns in texts. Code work employs the Python stack, including NumPy, Pandas, SciKit Learn, NLTK, and other packages.</p>
+<p><br></p>
+</div>
+<div id="big-data-systems" class="section level3">
+<h3>Big Data Systems</h3>
+<p><em>Course Description:</em> Increasingly, data scientists and data engineers are working with datasets that exceed the memory of a single machine. This motivates the need for a different paradigm of computing and a different toolset. This course will prepare you for this use case.</p>
+<p>The focus of the course is learning Spark, an open-source, general-purpose computing framework that is scalable and blazingly fast. The fundamental data types and concepts will be covered (e.g., resilient distributed datasets, DataFrames). You will learn how to use Spark for large-scale analytics and machine learning, among other topics. Tools for data storage and retrieval will be covered, including AWS and the Hadoop ecosystem.</p>
+<p>A team project is a large component of the course, whereby you will conduct an end-to-end data science project. This simulates the workflow of a professional data scientist, from developing a hypothesis to communicating with stakeholders.</p>
+<p>After completing this course, you will have developed valuable data science skills and experience working with big data frameworks.</p>
+<p><br></p>
+</div>
+</div>
 <div id="spring-2021" class="section level2">
 <h2><strong>Spring 2021</strong></h2>
 <div id="foundations-of-computer-science-cs-5012" class="section level3">
@@ -312,7 +328,7 @@ $(document).ready(function () {
 <p><em>Course Description:</em> Data mining describes approaches to turning data into information. Rather than the more typical deductive strategy of building models using known principles, data mining uses inductive approaches to discover the appropriate models. These models describe a relationship between a system’s response and a set of factors or predictor variables. Data mining in this context provides a formal basis for machine learning and knowledge discovery. This course investigates the construction of empirical models from data mining for systems with both discrete and continuous valued responses. It covers both estimation and classification, and explores both practical and theoretical aspects of data mining.</p>
 <p><img src="Images/NPR_destruction.jpg" width="500" /></p>
 <p><a href="2020-11-22-haitian-blue-tarp/project.html">Final Project: Haitain Earthquake Disaster Response</a></p>
-<p><em>Project Description:</em> Used data modeling techniques (logistic regression, LDA, QDA, KNN, SVM, and random forest) to predict the presence of blue tarps from disaster relief data.</p>
+<p><em>Project Description:</em> Predicted the presence of blue tarps from disaster relief data using data modeling techniques (logistic regression, LDA, QDA, KNN, SVM, and random forest).</p>
 <p><br></p>
 </div>
 </div>
@@ -323,7 +339,7 @@ $(document).ready(function () {
 <p><em>Course Description:</em> An introduction to linear statistical models in the context of data science. Topics include simple and multiple linear regression, generalized linear models, time series, analysis of covariance, tree-based classification, and principal components. The primary software is R.</p>
 <p><img src="Images/Chicago.jpg" height="400" /></p>
 <p><a href="https://github.com/camillevleonard/STAT6021_FinalProject">Final Project: Tip Analysis of Chicago Transportation Network Company Trips</a></p>
-<p><em>Project Description</em> Logistic regression was applied to the City of Chicago’s Transportation Networking Companies (TNC) “Trips” data set. Our group set out to predict whether a driver would receive a tip.</p>
+<p><em>Project Description</em> Predicted whether a driver would receive a tip using logistic regression applied to the City of Chicago’s Transportation Networking Companies (TNC) “Trips” data set.</p>
 <p><br></p>
 </div>
 <div id="programming-and-systems-for-data-science-cs-5010" class="section level3">
