--- a/index.html
+++ b/index.html
@@ -292,6 +292,23 @@ $(document).ready(function () {
 <p>Below I have listed my UVA MSDS coursework, personal projects, and additional independent learning. To view project write-ups and code please visit the included links. I’m most proud of my final project from the Data Mining class. Check it out if you have a few minutes!</p>
 <p><br></p>
 </div>
+<div id="fall-2021" class="section level2">
+<h2><strong>Fall 2021</strong></h2>
+<div id="bayesian-machine-learning-ds-6040" class="section level3">
+<h3>Bayesian Machine Learning (DS 6040)</h3>
+<p><em>Course Description:</em> Bayesian inferential methods provide a foundation for machine learning under conditions of uncertainty. Bayesian machine learning techniques can help us to more effectively address the limits to our understanding of world problems. This class covers the major related techniques, including Bayesian inference, conjugate prior probabilities, naive Bayes classifiers, expectation maximization, Markov chain monte carlo, and variational inference.</p>
+<p><br></p>
+</div>
+<div id="practice-and-applications-of-data-science-ds-6001" class="section level3">
+<h3>Practice and Applications of Data Science (DS 6001)</h3>
+<p><em>Course Description:</em> This course covers data science practice, including communication, exploratory data analysis, and visualization. Also covered are the selection of algorithms to suit the problem to be solved, user needs, and data. Case studies will explore the impact of data science across different domains.</p>
+<p><br></p>
+</div>
+<div id="data-science-capstone-project-work-i-ds-6011" class="section level3">
+<h3>Data Science Capstone Project Work I (DS 6011)</h3>
+<p><em>Course Description:</em> This course is designed for capstone project teams to meet in groups, with advisors, and with clients to advance work on their projects.</p>
+</div>
+</div>
 <div id="summer-2021" class="section level2">
 <h2><strong>Summer 2021</strong></h2>
 <div id="exploratory-text-analytics-ds-5001" class="section level3">
