--- a/CS_5012_ER_Diagram.html
+++ b/CS_5012_ER_Diagram.html
@@ -251,7 +251,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="https://drive.google.com/file/d/1Ovwo79nQsklCJ9VDIA3fm_UPsmLeqyJM/view?usp=sharing">Resume</a>
+  <a href="https://docs.google.com/document/d/1Hoe1nAYz-JiKdfV76ppUIxGoOkSn89bs/edit?usp=sharing&amp;ouid=114717442966768718159&amp;rtpof=true&amp;sd=true">Resume</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
