Update home page

--- a/index.html
+++ b/index.html
@@ -375,6 +375,10 @@ $(document).ready(function () {
 <h2><strong>Additional Learning</strong></h2>
 <ul>
 <li><a href="https://www.pluralsight.com/courses/how-git-works">How Git Works</a></li>
+<li>Developing static websites with R Markdown files and Github Pages
+<ul>
+<li>This website is created by this method and <a href="www.bandybloomery.com">www.bandybloomery.com</a></li>
+</ul></li>
 </ul>
 <p><br> <br></p>
 <p>This website is created from Rmd files hosted on Github based on <a href="http://nickstrayer.me/RMarkdown_Sites_tutorial/">this tutorial</a> by Nick Strayer.</p>
