--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ $(document).ready(function () {
 <li><a href="https://www.pluralsight.com/courses/how-git-works">How Git Works</a></li>
 <li>Developing static websites with R Markdown files and Github Pages
 <ul>
-<li>This website is created by this method and <a href="www.bandybloomery.com">www.bandybloomery.com</a></li>
+<li>This website is created by this method and <a href="https://www.bandybloomery.com/">www.bandybloomery.com</a></li>
 </ul></li>
 </ul>
 <p><br> <br></p>
