Small update to indicate site will be updated soon

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="https://drive.google.com/file/d/1Z88AX8PJ2-Mtl_vJeJ-GaSmdBMEIElRp/view?usp=sharing">Resume</a>
+  <a href="https://drive.google.com/file/d/12Xif52HJdfwHtWwhyMyxjFh7fnXGsv3u/view?usp=sharing">Resume</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -287,9 +287,9 @@ $(document).ready(function () {
 
 <p><span class="math inline">\(~\)</span></p>
 <div id="welcome-to-my-website" class="section level3">
-<h3>Welcome to my website!</h3>
-<p>I’m currently completing a MS in Data Science through UVA’s part-time online program. I’m incredibly excited to be learning something new and love digging into the data.</p>
-<p>Below I have listed my UVA MSDS coursework, personal projects, and additional independent learning. To view project write-ups and code please visit the included links. I’m most proud of my final project from the Data Mining class. Check it out if you have a few minutes!</p>
+<h3>This site is currently under construction.</h3>
+<p>I recently completed a MS in Data Science through UVA’s part-time online program. I'll soon be updating this site to reflect all the projects and coursework from the program. I thoroughly enjoyed the MSDS program and cannot wait to put my DS skills to use.</p>
+<p></p>
 <p><br></p>
 </div>
 <div id="fall-2021" class="section level2">
